Bug 511649 - Spectacle Save As does not remember last save destination/folder anymore
Summary: Spectacle Save As does not remember last save destination/folder anymore
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 6.5.1
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords: regression
: 513367 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-11-04 21:36 UTC by rrpeak+kdebug
Modified: 2026-01-20 14:52 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rrpeak+kdebug 2025-11-04 21:36:48 UTC
SUMMARY
Spectacle Save As does not remember last save destination/folder anymore

STEPS TO REPRODUCE
1. Open Spectacle and take a screenshot
2. Select "Save As" and navigate to a folder
3. Save the screenshot there
4. Open spectacle again, take another screenshot
5. select "Save As"

OBSERVED RESULT
Save As opens up on another folder (possibly the last folder used before this bug was introduced)

EXPECTED RESULT
Save as opens last save destination/folder

SOFTWARE/OS VERSIONS
Operating System: Ultramarine Linux 42
KDE Plasma Version: 6.5.1
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.3
Kernel Version: 6.17.5-200.fc42.x86_64 (64-bit)


ADDITIONAL INFORMATION
Comment 1 Zilco 2025-11-05 02:20:36 UTC
Reporting that this is occurring on Fedora 43 as well.

Operating System: Fedora Linux 43
KDE Plasma Version: 6.5.1
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.17.6-300.fc43.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 2 Ganton 2025-11-23 21:13:34 UTC
If it may help, it doesn't happen (Spectacle remembers the last location used to "Save As...") using a clean virtual machine with:
    Operating System: Kubuntu 25.10
    KDE Plasma Version: 6.4.5
    KDE Frameworks Version: 6.17.0
    Qt Version: 6.9.2
    Kernel Version: 6.17.0-6-generic (64-bit)
    Graphics Platform: Wayland [the same happens with X11]
although it's an older version of Plasma, etc.
Comment 3 jl710 2025-12-07 11:41:06 UTC
This seems to be a bug with the config file `~/.config/spectaclerc`. It uses the path written in `lastImageSaveAsLocation`. But it seems that after some update or so, it only writes the saved as location to `lastImageSaveLocation`. So the last used location gets saved, but in the wrong config key. Maybe someone who is familiar with the code base could look into that.
Comment 4 Nate Graham 2025-12-15 14:49:08 UTC
*** Bug 513367 has been marked as a duplicate of this bug. ***
Comment 5 Enrico 2026-01-09 19:01:07 UTC
I have the same "issue" using Spectacle 6.5.4 on 

Operating System: CachyOS Linux 
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.21.0
Qt Version: 6.10.1
Kernel Version: 6.18.3-2-cachyos (64-bit)
Comment 6 Bug Janitor Service 2026-01-20 11:14:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/spectacle/-/merge_requests/504
Comment 7 Noah Davis 2026-01-20 12:07:15 UTC
Git commit eebe2def258ce72603588656d65fc08a3a1e4f38 by Noah Davis.
Committed on 20/01/2026 at 11:20.
Pushed by ndavis into branch 'master'.

Fix Save As location not being remembered

As part of a previous fix to prevent crashes while the Save As dialog was opened,
we changed some file export logic. Unfortunately, that caused the code that saved
the location to be skipped. The location should now be saved.
FIXED-IN: 6.6

M  +2    -0    src/ExportManager.cpp

https://invent.kde.org/plasma/spectacle/-/commit/eebe2def258ce72603588656d65fc08a3a1e4f38
Comment 8 Noah Davis 2026-01-20 12:08:03 UTC
Git commit ef3cec6c15a0a214dbc52514d09407143c1bca11 by Noah Davis.
Committed on 20/01/2026 at 12:07.
Pushed by ndavis into branch 'Plasma/6.6'.

Fix Save As location not being remembered

As part of a previous fix to prevent crashes while the Save As dialog was opened,
we changed some file export logic. Unfortunately, that caused the code that saved
the location to be skipped. The location should now be saved.
FIXED-IN: 6.6


(cherry picked from commit eebe2def258ce72603588656d65fc08a3a1e4f38)

Co-authored-by: Noah Davis <noahadvs@gmail.com>

M  +2    -0    src/ExportManager.cpp

https://invent.kde.org/plasma/spectacle/-/commit/ef3cec6c15a0a214dbc52514d09407143c1bca11
Comment 9 Noah Davis 2026-01-20 14:51:54 UTC
Git commit 3d59a309ef885705e91b533ab251e9625abd11d8 by Noah Davis.
Committed on 20/01/2026 at 14:51.
Pushed by ndavis into branch 'Plasma/6.5'.

Fix Save As location not being remembered

As part of a previous fix to prevent crashes while the Save As dialog was opened,
we changed some file export logic. Unfortunately, that caused the code that saved
the location to be skipped. The location should now be saved.
FIXED-IN: 6.6


(cherry picked from commit eebe2def258ce72603588656d65fc08a3a1e4f38)

Co-authored-by: Noah Davis <noahadvs@gmail.com>

M  +2    -0    src/ExportManager.cpp

https://invent.kde.org/plasma/spectacle/-/commit/3d59a309ef885705e91b533ab251e9625abd11d8