Fix Save As location not being remembered

As part of a previous fix to prevent crashes while the Save As dialog was opened,
we changed some file export logic. Unfortunately, that caused the code that saved
the location to be skipped. The location should now be saved.

BUG: 511649
FIXED-IN: 6.6


(cherry picked from commit eebe2def258ce72603588656d65fc08a3a1e4f38)

Co-authored-by: Noah Davis <noahadvs@gmail.com>